--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,14 +4,19 @@
     <mat-grid-tile></mat-grid-tile>
     <mat-grid-tile>
 
+
+
+
+       
+
             <form class="example-form">
                 <mat-form-field class="example-full-width">
-                    <input matInput placeholder="Login">
+                    <input matInput placeholder="Login" [(ngModel)]="pseudoForLogin" name="pseudoForLogin">
                 </mat-form-field>
                 
-                <mat-form-field class="example-full-width">
-                        <input matInput placeholder="Password" >
-                </mat-form-field>
+              
+                
+                <button mat-flat-button color="warn" (click)="checkLogin()" type="button" name="validate">Connexion</button>
             </form>
 
     </mat-grid-tile>
