--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 
 <mat-toolbar color="primary" class="header">
   <div matRipple class="title-left mat-h1" [routerLink]="['/login']">
-    <strong>Trombinoscope</strong>
+    <strong>Chat</strong>
   </div>
   <span class="menu-spacer"></span>
     <div class="example-button-row">
